import from old website

--- a/josebadalmau.com/htdocs/index.html
+++ b/josebadalmau.com/htdocs/index.html
@@ -116,40 +116,6 @@ the page's dimensions and scaling -->
 			</div> 
 		</div>
 
-
-		<div class="articlelist block" id="preprints">
-			<h2>Preprints</h2>
-			<ol>
-				<li>
-					<a href="https://scholar.google.fr/citations?user=SCpz8XMAAAAJ&hl=en">L. Mossina</a>, Joseba Dalmau, <a href="https://leo.andeol.eu">L. And&eacute;ol</a><br />
-					<i>Conformal Semantic Image Segmentation: Post-hoc Quantification of Predictive Uncertainty</i><br />
-					Accepted in: SAIAD 2024 at CVPR.<br />
-					<a href="https://arxiv.org/abs/2405.05145">arXiv preprint</a>
-				</li>
-				<li>
-					F. de Grancey, 
-						<a href="https://www.math.univ-toulouse.fr/~sgerchin/">S. Gerchinovitz</a>, 
-						L. Alecu, H. Bonnin, J. Dalmau, 
-						<a href="https://www.onera.fr/en/staff/kevin-delmas">K. Delmas</a>, 
-						<a href="https://scholar.google.fr/citations?user=fTAvr_MAAAAJ&hl=fr">F. Mamalet</a><br />
-					<i>On the Feasibility of EASA Learning Assurance Objectives for Machine Learning Components</i><br />
-					Accepted in: ERTS 2024.<br />
-					<a href="https://hal.science/hal-04575318v1">HAL preprint</a>
-				</li>
-				<li>
-					<a href="https://scholar.google.fr/citations?user=Twuan38AAAAJ&hl=fr">D. Vigouroux</a>, Joseba Dalmau, <a href="https://louis-bethune.fr">L. B&eacute;thune</a><br />
-					<i>Deep Sturm–Liouville: Learnable orthogonal basis functions parameterized by neural networks</i><br />
-					<a href="https://hal.science/hal-04446268v1">HAL preprint</a>
-				</li>
-				<li>
-					<a href="https://paulnovello.github.io">P. Novello</a>, Joseba Dalmau, <a href="https://leo.andeol.eu">L. And&eacute;ol</a><br />
-					<i>Out-of-Distribution Detection Should Use Conformal Prediction (and Vice-versa?)</i><br />
-					<a href="https://arxiv.org/abs/2403.11532">arXiv preprint</a>
-				</li>
-			</ol>
-		</div>
-
-
 		<div class="articlelist block" id="publications">
 			<h2>Publications</h2>
 			<ol>
@@ -262,18 +228,30 @@ the page's dimensions and scaling -->
 			</ol>
 		</div>
 
+
+
+		<div class="articlelist block" id="preprints">
+			<h2>Preprints</h2>
+			<ol>
+				<li>
+					<a href="https://www.math.u-psud.fr/~cerf/">R. Cerf</a>, Joseba Dalmau<br />
+					<i>A probabilistic proof of Perron's theorem</i><br />
+					<a href="https://arxiv.org/abs/1801.05252">arXiv preprint</a>
+				</li>
+
+				<li>
+					<a href="https://www.math.u-psud.fr/~cerf/">R. Cerf</a>, Joseba Dalmau<br />
+					<i>The quasispecies distribution</i><br />
+					<a href="https://arxiv.org/abs/1609.05738">arXiv preprint</a>
+				</li>
+			</ol>
+		</div>
 		
 
 
 		<div class="articlelist block" id="publications">
 			<h2>Talks</h2>
 			<ol>
-				<li>
-					<a href="https://www.linkedin.com/posts/deel-ai_j-4-focus-technique-aniti-puncc-empowering-activity-7150837139679694850-h7Dd">
-					Focus Technique ANITI</a><br />
-					Webinar, Toulouse, January 2024<br />
-					<i>Empowering trustworthy AI with reliable predictive uncertainty quantification</i>
-				</li>
 				<li>
 					Probability: Models and Applications</a><br />
 					East China Normal University, Shanghai (China), December 2020<br />
