update about and articles

--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@ the page's dimensions and scaling -->
 			in Toulouse, as a member of the 
 			<a href="https://www.deel.ai">DEEL Project</a>.
 			My research focuses on Dependable and Certifiable AI,
-			particularly on Conformal Prediction and other 
-			rigourous probabilistic guarantees for Deep Neural Networks.<br /><br />
+			particularly on Uncertainty Quantification, Anomaly Detection and 
+			Out-of-Distribution detection for Deep Neural Network.<br /><br />
+
+			Since September 2024 I am also a part-time associate professor at 
+			<a href="https://www.insa-toulouse.fr">INSA Toulouse</a>.
 			
 			Prior to that I was a Research Engineer
 			in Huawei's Paris Research Center,
@@ -121,21 +124,9 @@ the page's dimensions and scaling -->
 			<h2>Preprints</h2>
 			<ol>
 				<li>
-					<a href="https://scholar.google.fr/citations?user=SCpz8XMAAAAJ&hl=en">L. Mossina</a>, Joseba Dalmau, <a href="https://leo.andeol.eu">L. And&eacute;ol</a><br />
-					<i>Conformal Semantic Image Segmentation: Post-hoc Quantification of Predictive Uncertainty</i><br />
-					Accepted in: SAIAD 2024 at CVPR.<br />
-					<a href="https://arxiv.org/abs/2405.05145">arXiv preprint</a>
-				</li>
-				<li>
-					F. de Grancey, 
-						<a href="https://www.math.univ-toulouse.fr/~sgerchin/">S. Gerchinovitz</a>, 
-						L. Alecu, H. Bonnin, J. Dalmau, 
-						<a href="https://www.onera.fr/en/staff/kevin-delmas">K. Delmas</a>, 
-						<a href="https://scholar.google.fr/citations?user=fTAvr_MAAAAJ&hl=fr">F. Mamalet</a><br />
-					<i>On the Feasibility of EASA Learning Assurance Objectives for Machine Learning Components</i><br />
-					Accepted in: ERTS 2024.<br />
-					<a href="https://hal.science/hal-04575318v1">HAL preprint</a>
-				</li>
+					<a href="https://paulnovello.github.io">P. Novello</a>, Yannick Prudent, Joseba Dalmau, Corentin Friedrich, <a href="https://www.irif.fr/~pequignot/">Yann Pequignot</a><br />
+					<i>Improving Out-of-Distribution Detection by Combining Existing Post-hoc Methods</i><br />
+					<a href="https://arxiv.org/abs/2407.07135">arXiv preprint</a>
 				<li>
 					<a href="https://scholar.google.fr/citations?user=Twuan38AAAAJ&hl=fr">D. Vigouroux</a>, Joseba Dalmau, <a href="https://louis-bethune.fr">L. B&eacute;thune</a><br />
 					<i>Deep Sturm–Liouville: Learnable orthogonal basis functions parameterized by neural networks</i><br />
@@ -153,6 +144,23 @@ the page's dimensions and scaling -->
 		<div class="articlelist block" id="publications">
 			<h2>Publications</h2>
 			<ol>
+				<li>
+					<a href="https://scholar.google.fr/citations?user=SCpz8XMAAAAJ&hl=en">L. Mossina</a>, Joseba Dalmau, <a href="https://leo.andeol.eu">L. And&eacute;ol</a><br />
+					<i>Conformal Semantic Image Segmentation: Post-hoc Quantification of Predictive Uncertainty</i><br />
+					Proceedings of the IEEE/CVF CVPR Workshops, 3574-3584, 2024.<br />
+					<a href="https://openaccess.thecvf.com/content/CVPR2024W/SAIAD/html/Mossina_Conformal_Semantic_Image_Segmentation_Post-hoc_Quantification_of_Predictive_Uncertainty_CVPRW_2024_paper.html">Conference link</a>
+					<a href="https://arxiv.org/abs/2405.05145">arXiv preprint</a>
+				</li>
+				<li>
+					F. de Grancey, 
+						<a href="https://www.math.univ-toulouse.fr/~sgerchin/">S. Gerchinovitz</a>, 
+						L. Alecu, H. Bonnin, J. Dalmau, 
+						<a href="https://www.onera.fr/en/staff/kevin-delmas">K. Delmas</a>, 
+						<a href="https://scholar.google.fr/citations?user=fTAvr_MAAAAJ&hl=fr">F. Mamalet</a><br />
+					<i>On the Feasibility of EASA Learning Assurance Objectives for Machine Learning Components</i><br />
+					ERTS, 2024.<br />
+					<a href="https://hal.science/hal-04575318v1">HAL preprint</a>
+				</li>
 				<li>
 					<a href="http://francis.comets.free.fr/">F. Comets</a>, Joseba Dalmau, <a href="https://www.mat.uc.cl/personas/perfil/sasaglietti">Santiago Saglietti</a><br />
 					<i>Scaling limit of the heavy-tailed ballistic deposition model with p-sticking</i><br />
