--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ the page's dimensions and scaling -->
 			Out-of-Distribution detection for Deep Neural Network.<br /><br />
 
 			Since September 2024 I am also a part-time associate professor at 
-			<a href="https://www.insa-toulouse.fr">INSA Toulouse</a>.
+			<a href="https://www.insa-toulouse.fr">INSA Toulouse</a>.<br /><br />
 			
 			Prior to that I was a Research Engineer
 			in Huawei's Paris Research Center,
