--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ the page's dimensions and scaling -->
 		<p>
 		<img src="joseba.jpg" alt="A photo of myself" 
 		width="27%" align="right"
-		style="float:right; margin-left: 40px; margin-right: 20px; margin-top: 70px;"
+		style="float:right; margin-left: 40px; margin-right: 20px; margin-top: 70px; margin-bottom: 20px;"
 		border="0">
 		</p>
 
