--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ the page's dimensions and scaling -->
 			<a href="https://www.deel.ai">DEEL Project</a>.
 			My research focuses on Dependable and Certifiable AI,
 			particularly on Uncertainty Quantification, Anomaly Detection and 
-			Out-of-Distribution detection for Deep Neural Network.<br /><br />
+			Out-of-Distribution detection for Deep Neural Networks.<br /><br />
 
 			Since September 2024 I am also a part-time associate professor at 
 			<a href="https://www.insa-toulouse.fr">INSA Toulouse</a>.<br /><br />
@@ -96,7 +96,7 @@ the page's dimensions and scaling -->
 		<div class="block" id="contact">
 			<h2>Contact</h2>
 			<p>Don't hesitate to contact me by email at: 
-				<i>dalmau.joseba@gmail.com</i><br />
+				<i>joseba.@irt-saintexupery.com</i><br />
 			</p>
 		</div>
 
