--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ the page's dimensions and scaling -->
 		<div class="block" id="contact">
 			<h2>Contact</h2>
 			<p>Don't hesitate to contact me by email at: 
-				<i>joseba.@irt-saintexupery.com</i><br />
+				<i>joseba.dalmau@irt-saintexupery.com</i><br />
 			</p>
 		</div>
 
